--- a/app/src/main/res/drawable/gold_medal.xml
+++ b/app/src/main/res/drawable/gold_medal.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <gradient
+        android:startColor="#FCFDDB"
+        android:endColor="#CF9421"
+        android:angle="270"/>
 </shape>
